--- a/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
+++ b/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
@@ -14,5 +14,24 @@
     "Language": "English",
     "Messages": "Hello There;Thanks For Using Azure App Configuration",
     "BackgroundColor": "Orange"
-  }
+  },
+
+  "AzureAppConfigurationEndpoint": "Replace with App Config Endpoint",
+
+  //
+  // Uncomment section to use local app settings.
+  //
+  /*
+  "WebDemo": {
+    "Settings": {
+      "AppName": "Azure App Configuration Demo",
+      "Version": 1.0,
+      "FontSize": 50,
+      "RefreshRate": 1000,
+      "Language": "English",
+      "Messages": "Hello There. Thanks for using Azure App Configuration",
+      "BackgroundColor": "Orange"
+    }
+    */
+}
 }
