--- a/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
+++ b/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
@@ -6,17 +6,7 @@
     }
   },
 
-  "Settings": {
-    "AppName": "Azure App Configuration Demo",
-    "Version": 1.0,
-    "FontSize": 50,
-    "RefreshRate": 1000,
-    "Language": "English",
-    "Messages": "Hello There;Thanks For Using Azure App Configuration",
-    "BackgroundColor": "Orange"
-  },
-
-  "AzureAppConfigurationEndpoint": "Replace with App Config Endpoint",
+  "AzureAppConfigurationEndpoint": "",
 
   //
   // Uncomment section to use local app settings.
