--- a/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
+++ b/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/appsettings.json
@@ -8,10 +8,6 @@
 
   "AzureAppConfigurationEndpoint": "",
 
-  //
-  // Uncomment section to use local app settings.
-  //
-  /*
   "WebDemo": {
     "Settings": {
       "AppName": "Azure App Configuration Demo",
@@ -19,9 +15,8 @@
       "FontSize": 50,
       "RefreshRate": 1000,
       "Language": "English",
-      "Messages": "Hello There. Thanks for using Azure App Configuration",
+      "Messages": "Hello There. Thanks for using Azure App Configuration.",
       "BackgroundColor": "Orange"
     }
-    */
-}
+  }
 }
