--- a/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Microsoft.Azure.AppConfiguration.WebDemo.csproj
+++ b/examples/DotNetCore/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Microsoft.Azure.AppConfiguration.WebDemo.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="3.0.0-preview-010560002-1165" />
-    <PackageReference Include="Azure.Identity" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="appsettings.json">
