Removing unnecessary stuff

--- a/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
+++ b/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
@@ -9,7 +9,7 @@
   </configSections>
   <configBuilders>
     <builders>
-    <add name="AzureAppConfig" mode="Greedy" connectionString="${ConnectionString}" type="Microsoft.Configuration.ConfigurationBuilders.AzureAppConfigurationBuilder, Microsoft.Configuration.ConfigurationBuilders.AzureAppConfiguration" />
+    <add name="AzureAppConfig" mode="Greedy" connectionString="${ConnectionString}" keyFilter="WebDemo:*" type="Microsoft.Configuration.ConfigurationBuilders.AzureAppConfigurationBuilder, Microsoft.Configuration.ConfigurationBuilders.AzureAppConfiguration" />
     <add name="Environment" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
   <appSettings configBuilders="Environment,AzureAppConfig">
