--- a/.gitignore
+++ b/.gitignore
@@ -332,4 +332,6 @@ ASALocalRun/
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
 
-appSettings.json
+# Remove generated files
+*/wwwroot/lib/*
+*/wwwroot/favicon.ico
