Reset settings files

--- a/examples/DotNetCore/EventHub/appsettings.json
+++ b/examples/DotNetCore/EventHub/appsettings.json
@@ -1,26 +1,25 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*",
-    "EventHubConnection": {
-      "EventHubConnectionString": "",
-      "EventHubName": "",
-      "BlobStorageConnectionString": "",
-      "BlobStorageContainerName": "",
-      "AppConfigConnectionString": ""
-    },
-    "Demo": {
-      "Settings": {
-        "Messages": "Hello there!; General Kenobi! You are a bold one.",
-        "FontSize": 24,
-        "FontColor": "White",
-        "BackgroundColor": "Black"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "EventHubConnection": {
+    "EventHubConnectionString": "",
+    "EventHubName": "demo-hub-1",
+    "BlobStorageConnectionString": "",
+    "BlobStorageContainerName": "ehcontainer",
+    "AppConfigConnectionString": ""
+  },
+  "Demo": {
+    "Settings": {
+      "Messages": "Hello!",
+      "FontSize": 24,
+      "FontColor": "White",
+      "BackgroundColor": "Black"
     }
   }
-  
+}
