Adding comment explaining how to use managed identity

--- a/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
+++ b/examples/DotNetFramework/WebDemo/Microsoft.Azure.AppConfiguration.WebDemo/Web.config
@@ -9,6 +9,11 @@
   </configSections>
   <configBuilders>
     <builders>
+    <!-- To use managed identity rather than a connection string, change: 
+            connectionString="${ConnectionString}"
+         to:
+            endpoint="<endpoint for App Configuration store>"
+    -->
     <add name="AzureAppConfig" mode="Greedy" connectionString="${ConnectionString}" keyFilter="WebDemo:*" type="Microsoft.Configuration.ConfigurationBuilders.AzureAppConfigurationBuilder, Microsoft.Configuration.ConfigurationBuilders.AzureAppConfiguration" />
     <add name="Environment" type="Microsoft.Configuration.ConfigurationBuilders.EnvironmentConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.Environment, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
