--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,9 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Java
+.classpath
+.project
+.settings
+target/
