--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 **/Properties/launchSettings.json
+**/Properties/PublishProfiles/
+**/Properties/ServiceDependencies/
+**/Properties/serviceDependencies.json
+**/Properties/serviceDependencies.local.json
 
 # StyleCop
 StyleCopReport.xml
