Ignore some build/publish artifacts from git (#564)
Ignore servicedependencies from git

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 **/Properties/launchSettings.json
+**/Properties/ServiceDependencies/
+**/Properties/serviceDependencies*.json
 
 # StyleCop
 StyleCopReport.xml
