--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+
+# visual studio code
+.vscode/
+
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
