--- a/examples/DotNetCore/AzureFunction/FunctionAppIsolatedMode/FunctionAppIsolatedMode.csproj
+++ b/examples/DotNetCore/AzureFunction/FunctionAppIsolatedMode/FunctionAppIsolatedMode.csproj
@@ -5,10 +5,10 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.Functions.Worker" Version="5.0.0-preview" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" OutputItemType="Analyzer" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="4.5.1" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
