add blob storage example from customer issue

--- a/examples/DotNetCore/ConsoleApplicationWithMap/ConsoleApplicationWithMap/ConsoleApplicationWithMap.csproj
+++ b/examples/DotNetCore/ConsoleApplicationWithMap/ConsoleApplicationWithMap/ConsoleApplicationWithMap.csproj
@@ -13,8 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Graph" Version="5.5.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.52.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
