in progress, adding appsettings.json and testing configuration

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/ConsoleAppWithTableStorageReference.csproj
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/ConsoleAppWithTableStorageReference.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
     <PackageReference Include="Azure.Identity" Version="1.8.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
