allow configuration setup through appsettings.json

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
@@ -2,12 +2,12 @@
   "MyShop": {
     "Inventory": [
       {
-        "ProductName": "Product1",
+        "Name": "Product1",
         "Quantity": 8,
         "OnSale": true
       },
       {
-        "ProductName": "Product2",
+        "Name": "Product2",
         "Quantity": 24,
         "OnSale": false
       }
