add comments, get displayed columns as array

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
@@ -1,3 +1,4 @@
+// Example shop inventory data. This data will be used if the 'MyShop:Inventory' key is not set.
 {
   "MyShop": {
     "Inventory": [
@@ -11,6 +12,7 @@
         "Quantity": 24,
         "OnSale": false
       }
-    ]
+    ],
+    "DisplayedColumns": ["Name", "OnSale"]
   }
 }
