clarify comments, use list

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
@@ -1,4 +1,4 @@
-// Example shop inventory data. This data will be used if the 'MyShop:Inventory' key is not set.
+// Example shop inventory data. This data will be used if the "MyShop:Inventory" key is not set appropriately in App Configuration.
 {
   "MyShop": {
     "Inventory": [
@@ -13,6 +13,6 @@
         "OnSale": false
       }
     ],
-    "DisplayedColumns": ["Name", "OnSale"]
+    "DisplayedColumns": [ "Name", "OnSale" ]
   }
 }
