clarify product names

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
@@ -3,12 +3,12 @@
   "MyShop": {
     "Inventory": [
       {
-        "Name": "Product1",
+        "Name": "DefaultProduct1",
         "Quantity": 8,
         "OnSale": true
       },
       {
-        "Name": "Product2",
+        "Name": "DefaultProduct2",
         "Quantity": 24,
         "OnSale": false
       }
