fix appsettings.json naming

--- a/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
+++ b/examples/DotNetCore/ConsoleAppWithTableStorageReference/appsettings.json
@@ -13,6 +13,6 @@
         "OnSale": false
       }
     ],
-    "DisplayedColumns": [ "Name", "OnSale" ]
+    "DisplayedProperties": [ "Name", "OnSale" ]
   }
 }
