Updating after release.

--- a/examples/Python/python-django-webapp-sample/requirements.txt
+++ b/examples/Python/python-django-webapp-sample/requirements.txt
@@ -1,4 +1,5 @@
 Django==4.1.13
 whitenoise==6.4.0
-azure-appconfiguration-provider==1.1.0
+azure-appconfiguration-provider==1.2.0
 azure-identity==1.12.0
+featuremanagement==1.0.0b1
