--- a/examples/Python/python-flask-webapp-sample/requirements.txt
+++ b/examples/Python/python-flask-webapp-sample/requirements.txt
@@ -1,3 +1,4 @@
 Flask==2.3.2
 azure-identity==1.12.0
-azure-appconfiguration-provider==1.1.0
+azure-appconfiguration-provider==1.2.0
+featuremanagement==1.0.0b1
