changes for comments

--- a/examples/QuickStart/JavaSpring/QuickStart/src/main/resources/bootstrap.properties
+++ b/examples/QuickStart/JavaSpring/QuickStart/src/main/resources/bootstrap.properties
@@ -1,1 +1,2 @@
+spring.application.name=QuickStart
 spring.cloud.azure.appconfiguration.stores[0].connection-string= ${APP_CONFIGURATION_CONNECTION_STRING}
