update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,7 @@ ASALocalRun/
 env/
 
 examples/QuickStart/JavaSpring/QuickStart/.mvn/
+examples/QuickStart/JavaSpring/QuickStart/mvn
+examples/QuickStart/JavaSpring/QuickStart/mvn.cmd
+
+
