Add basic apps for quickstarts in portal (#944)
* added directory and app

* added js quick start file, renamed py

* initial java spring commit

* changes to java spring app

* changed to java 17 and spring boot 3.x

* make quick starts only use one key

* remove gitignore

* change dotnet env variable name to match others

* update spring azure version

* changes for comments

* remove .mvn

* update git ignore

* removed unnecessary lines from pom

* Update examples/QuickStart/JavaSpring/QuickStart/src/main/resources/bootstrap.properties

Co-authored-by: Matthew Metcalf <mrm9084@gmail.com>

* Update examples/QuickStart/JavaSpring/QuickStart/src/main/java/app/config/QuickStart/MyProperties.java

Co-authored-by: Matthew Metcalf <mrm9084@gmail.com>

* update bootstrap

* formatting change

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,9 @@ ASALocalRun/
 
 # Python env
 env/
+
+examples/QuickStart/JavaSpring/QuickStart/.mvn/
+examples/QuickStart/JavaSpring/QuickStart/mvn
+examples/QuickStart/JavaSpring/QuickStart/mvn.cmd
+
+
