Upgrade the .NET console app sample to .NET 8

--- a/examples/DotNetCore/ConsoleApplication/appsettings.json
+++ b/examples/DotNetCore/ConsoleApplication/appsettings.json
@@ -1,4 +1,5 @@
 {
   "AppName": "Azure App Configuration Console App",
-  "Language": "English"
+  "Language": "English",
+  "AppConfigEndpoint": ""
 }
