Update quickstart sample app to use EntraID authentication

--- a/examples/QuickStart/JavaScript/QuickStartApp/package.json
+++ b/examples/QuickStart/JavaScript/QuickStartApp/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
-        "@azure/app-configuration-provider": "latest"
+        "@azure/app-configuration-provider": "latest",
+        "@azure/identity": "latest"
     }
 }
