--- a/examples/QuickStart/JavaSpring/QuickStart/pom.xml
+++ b/examples/QuickStart/JavaSpring/QuickStart/pom.xml
@@ -17,6 +17,10 @@
 			<groupId>com.azure.spring</groupId>
 			<artifactId>spring-cloud-azure-appconfiguration-config-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>azure-identity-spring</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
