--- a/examples/QuickStart/DotNet/QuickStartApp/QuickStartApp.csproj
+++ b/examples/QuickStart/DotNet/QuickStartApp/QuickStartApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.14.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="6.0.1" />
   </ItemGroup>
 
